# test-actions

./: .gitignore  CMakeLists.txt  Dockerfile  file
.github/actions/cmake/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: CI2.yml  DOCKERFILE  Dockerfile  continuous-integration-workflow.yml  create-release.yml  edit-code.yml  format.yml  make-pr.yml  make_release.sh  release_changelog.sh
