cmake_minimum_required(VERSION 3.10)

project(main LANGUAGES CXX)
set(PROJECT_VERSION "1.6.1")

option(INJECT_MARCH_NATIVE "Inject -march=native if compiler supports it" ON)
if(INJECT_MARCH_NATIVE)
  include(CheckCXXCompilerFlag)
  check_cxx_compiler_flag("-march=native" COMPILER_SUPPORTS_march_native)
  if(COMPILER_SUPPORTS_march_native)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
  endif()
endif()

add_executable(main main.cc)
install(TARGETS main DESTINATION ${CMAKE_INSTALL_BINDIR})
enable_testing()
add_test(test1 main 1)
add_test(test2 main 2)
add_test(test3 main 3)
